test/compile_errors/err_recovery_missing_type.w
//! expect-error: expected

type Point {
    x:
    y: i32,
}

fn main:
    print("ok")
